[bug]:toLis返回不可变数组,导致tableFields.removeIf报错